--- a/webpage/index.html
+++ b/webpage/index.html
@@ -174,7 +174,7 @@
     <div id="network" class="panel" style="display: none;">
       <h2>Network Config</h2>
 
-      <form method="POST" action="/configure">
+      <form id="network-config-form">
         <label for="ip_address">IP Address</label>
         <input type="text" id="ip_address" name="ip_address" value="192.168.1.100">
         <label for="subnet_mask">Netmask</label>
@@ -183,6 +183,8 @@
         <input type="text" id="gateway" name="gateway" value="192.168.1.1">
         <button type="submit">Save Config</button>
       </form>
+
+      <p id="config-status"></p>
     
     </div>
 
@@ -195,6 +197,30 @@
   </div>
 
   <script>
+    document.getElementById("network-config-form").addEventListener("submit", function(event) {
+        event.preventDefault(); // Prevent default form submission
+
+        const data = {
+            ip_address: document.getElementById("ip_address").value,
+            subnet_mask: document.getElementById("subnet_mask").value,
+            gateway: document.getElementById("gateway").value
+        };
+
+        fetch("/configure", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" }, // Send JSON
+            body: JSON.stringify(data) // Convert to JSON
+        })
+        .then(response => response.text()) // Handle response
+        .then(data => {
+            document.getElementById("config-status").textContent = "Configuration saved!";
+        })
+        .catch(error => {
+            console.error("Error:", error);
+            document.getElementById("config-status").textContent = "Failed to save configuration.";
+        });
+    });
+
     const buttons = document.querySelectorAll(".sidebar button");
     const sections = document.querySelectorAll(".main > .panel");
 
